--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -60,3 +60,9 @@ a:hover {
   align-items: center;
   margin: 20px 0;
 }
+
+.page-container{
+  display: flex;
+  flex-direction: column;
+  margin: 1em;
+}
